# micro-htmx

./: README.md  mpbridge.ignore  pyproject.toml
src/: Untitled-1.ipynb  base_elemets.py  boot.py  common_components.py  html_builder.py  main.py  microXTMX.py  new_state.py  pages.py  server.py  state.py
src/components/: temperature.py
src/lib/: PersistentDict.py  htpy.py  ringbuf_queue.mpy  typing_extensions.mpy  typing_extensions.py  ucontextlib.mpy
src/lib/microHTMX/: base_elemets.py  microHTMX.py  microXTMX.py  state.py
src/lib/microdot/: helpers.mpy  microdot.mpy  sse.mpy  sse.py  websocket.mpy
src/lib_src/microdot/: sse.py
src/public/: cdn.twind.style
src/public/gz/: gz.bulma.min.css  gz.flexboxgrid.min.css  gz.pico.zinc.min.css  gz.sse.js  gz.ws.js
